src/objects/Banana_GAPs_Knowledge__c.object
<CustomObject>
    <fields>
        <fullName>Banana_Farmer_GAPs_Selection__c</fullName>
        <label>Banana Farmer GAPs Selection</label>
        <referenceTo>Banana_Farmer_GAPs_Selection__c</referenceTo>
        <relationshipLabel>Banana GAPs Knowledge</relationshipLabel>
        <relationshipName>Banana_GAPs_Knowledge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Banana_pests_and_disease_control_Topics__c</fullName>
        <label>Banana pests and disease control Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Pest and disease control measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of pesticide application</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Banana_value_addition_Topics__c</fullName>
        <label>Banana value addition Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Value addition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Banana_Value_Addition__c</fullName>
        <label>Discussed Banana Value Addition</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Easy_Access_to_Agro_Inputs__c</fullName>
        <label>Discussed Easy Access to Agro Inputs</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Group_Production_and_Marketing__c</fullName>
        <label>Discussed Group Production and Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Pests_and_Diseases_Control__c</fullName>
        <label>Discussed Pests and Diseases Control</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Proper_Record_Keeping__c</fullName>
        <label>Discussed Proper Record Keeping</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Proper_and_Timely_Weed_Control__c</fullName>
        <label>Discussed Proper and Timely Weed Control</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Providing_Support_for_Plants__c</fullName>
        <label>Discussed Providing Support for Plants</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Pruning_Desuckering__c</fullName>
        <inlineHelpText>NA means Not Applicable</inlineHelpText>
        <label>Discussed Pruning Desuckering</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Soil_Fertility_Management__c</fullName>
        <label>Discussed Soil Fertility Management</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discussed_Soil_and_Water_Conservation__c</fullName>
        <label>Discussed Soil and Water Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Easily_access_agro_inputs_Topics__c</fullName>
        <label>Easily access agro-inputs Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Obtaining quality agro-chemicals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_production_and_marketing_Topics__c</fullName>
        <label>Group production and marketing Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Group production and marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_Discussion_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Knowledge Discussion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Knowledge_Discussion_Datetime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Knowledge Discussion Datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proper_and_timely_weed_control_Topics__c</fullName>
        <label>Proper and timely weed control Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Weed control methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of weeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time of weeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weed control program/plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount of herbicide used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of protective gear</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proper_record_keeping_Topics__c</fullName>
        <label>Proper record keeping Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Use production and marketing records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kind of records kept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Method of record storage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Providing_support_for_banana_plants__c</fullName>
        <label>Providing support for banana plants</label>
        <picklist>
            <picklistValues>
                <fullName>Providing support for banana plants</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pruning_desuckering_deleafing_topics__c</fullName>
        <label>Pruning, desuckering, deleafing topics</label>
        <picklist>
            <picklistValues>
                <fullName>Kind leaves removed during de-leafing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number plants per mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corm removal (after care)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removal of pseudo-stems</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soil_Fertility_Management_Topics__c</fullName>
        <label>Soil Fertility Management Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Means of soil fertilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type of fertilizers used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount of fertilizer used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mode of fertilizer or manure placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount of manure used per tree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage of fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time of fertilizer application</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soil_and_Water_Conservation_Topics__c</fullName>
        <label>Soil and Water Conservation Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Soil and water conservation measures</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>TaroWorks</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Banana GAPs Knowledge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BGK{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Banana GAPs Knowledge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Banana GAPs Knowledge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>